[gd_scene load_steps=11 format=3 uid="uid://cm2dnqesncqla"]

[ext_resource type="Script" uid="uid://mfjkxhsw7m0t" path="res://Scripts/player.gd" id="1_hqtel"]
[ext_resource type="Texture2D" uid="uid://c21l2now0qjlb" path="res://Art/playerPlaceholder.png" id="2_2hs0m"]
[ext_resource type="Script" uid="uid://cpga4ddoo0b60" path="res://Scripts/hand.gd" id="2_hqtel"]
[ext_resource type="Texture2D" uid="uid://bxc85apersjot" path="res://Art/Untitled_Artwork-1.png" id="4_2hs0m"]
[ext_resource type="Script" uid="uid://4v275k6cciod" path="res://Scripts/waving.gd" id="5_2hs0m"]
[ext_resource type="AudioStream" uid="uid://cun5w82tga751" path="res://SFX/Correct.mp3" id="6_1jxqw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2hs0m"]
size = Vector2(122, 225)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jxqw"]
size = Vector2(102, 205)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
size = Vector2(61, 283)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dw050"]
size = Vector2(123, 223)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_hqtel")

[node name="PlayerCamera" type="Camera2D" parent="."]

[node name="PlayerBody" type="Sprite2D" parent="." groups=["player"]]
z_index = 2
texture = ExtResource("2_2hs0m")

[node name="PlayerBodyCollision" type="CollisionShape2D" parent="." groups=["player"]]
z_index = 3
position = Vector2(2, 0.5)
shape = SubResource("RectangleShape2D_2hs0m")

[node name="PlayerHurtbox" type="Area2D" parent="." groups=["player"]]

[node name="PlayerHurtboxCollider" type="CollisionShape2D" parent="PlayerHurtbox"]
position = Vector2(2, 0.5)
shape = SubResource("RectangleShape2D_1jxqw")

[node name="WaveLeftArea" type="Area2D" parent="."]

[node name="WaveLeftCollider" type="CollisionShape2D" parent="WaveLeftArea"]
position = Vector2(-140, -75)
rotation = 2.0943952
shape = SubResource("RectangleShape2D_hqtel")

[node name="WaveRightArea" type="Area2D" parent="."]

[node name="WaveRightCollider" type="CollisionShape2D" parent="WaveRightArea"]
position = Vector2(140, -75)
rotation = -2.0943952
shape = SubResource("RectangleShape2D_hqtel")

[node name="HandPivot" type="Node2D" parent="."]
rotation = -1.5707964
script = ExtResource("2_hqtel")

[node name="Line2D" type="Line2D" parent="HandPivot"]
points = PackedVector2Array(0, 0, 200, 0)
default_color = Color(0, 0, 0, 1)

[node name="Hand" type="Sprite2D" parent="HandPivot" groups=["Hand"]]
z_index = 1
position = Vector2(180, 15.000008)
rotation = 1.5707964
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_2hs0m")
offset = Vector2(-90, -350)
script = ExtResource("5_2hs0m")

[node name="WaveDing" type="AudioStreamPlayer2D" parent="HandPivot/Hand"]
position = Vector2(1.3113417e-05, 300)
stream = ExtResource("6_1jxqw")

[node name="HandArea" type="Area2D" parent="HandPivot/Hand" groups=["Hand"]]

[node name="HandCollider" type="CollisionShape2D" parent="HandPivot/Hand/HandArea" groups=["Hand"]]
position = Vector2(-79.99997, -140)
shape = SubResource("RectangleShape2D_dw050")

[connection signal="area_entered" from="WaveLeftArea" to="HandPivot/Hand" method="_on_wave_left_area_area_entered"]
[connection signal="area_entered" from="WaveRightArea" to="HandPivot/Hand" method="_on_wave_right_area_area_entered"]
